--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <script src="https://kit.fontawesome.com/fa5cbb6a28.js" crossorigin="anonymous"></script>
-  <title>React App</title>
+  <title>Build a research team</title>
 </head>
 
 <body>
